# beast

./: .gitignore  .gitmodules  .readthedocs.yml  .rtd-environment.yml  .sparkleshare  .travis.yml  CHANGES.rst  MANIFEST.in  Makefile  README.rst  Random Forest attempts.py  __init__.py  ah_bootstrap.py  anased.py  anased.py.old  appveyor.yml  catgen.py  conda-environment.yml  config.py  contextManagers.py  creategrid.py  creategrid_mf.py  datamodel.rst  decorators.py  extinction.py  ezisoch.py  ezpipeline.py  getlibs.py  grid.py  install.rst  iso_interp.py  iso_interp.working.py  isochrone.py  lgtm.yml  main.py  multi_filt_test.py  mytables.py  observations.py  output.py  parallel_match.py  (+15 more)
.github/workflows/: tox-tests.yml
.tmp/test/: None_cat.fits
Tests/t0/: Av0  GRID  INPUTERR  INPUTSED  orig
Tests/t1/: Av  Av0  INPUTERR  INPUTSED  LAMB  filters  orig
beast/: Makefile  README.rst  __init__.py  _astropy_init.py  config.py  console_script.py  getlibs.py  main.py
beast/core/: createbiggrid.py  creategrid.py  extinction.py  grid.py  hdfstore.py  isochrone.py  phot.py  prior_weights.py  trim_grid.py
beast/fitting/: fit.py  models.py  pdf1d.py  pdf2d.py  trim_grid.py
beast/observationmodel/: extra_filters.py  observations.py  phot.py  plot_syncmd.py  vega.py
beast/old/: anased.py  creategrid.py  odict.py  output.py  photometry.py  simpletable.py  testunits.py
beast/physicsmodel/: create_project_dir.py  creategrid.py  grid.py  grid_and_prior_weights.py  grid_weights.py  grid_weights_stars.py  make_model.py  model_grid.py  models.py  prior_weights.py  prior_weights_dust.py  prior_weights_stars.py  priormodel.py  priormodel_functions.py
beast/plotting/: beastplotlib.py  make_ds9_region_file.py  plot_ast_diagnostics.py  plot_ast_histogram.py  plot_chi2_hist.py  plot_cmd.py  plot_cmd_with_fits.py  plot_compare_spec_type.py  plot_completeness.py  plot_dist_vs_dust_priors.py  plot_evoltracks.py  plot_filters.py  plot_good_bad.py  plot_graphic_file_flow.py  plot_graphic_model.py  plot_indiv_fit.py  plot_indiv_fit_paper.py  plot_indiv_pdfs.py  plot_isochrones.py  plot_mag_hist.py  plot_noisemodel.py  plot_param_err.py  plot_param_recovery.py  plot_param_vs_chi2min.py  plot_region_diags.py  plot_stats_check.py  plot_syncmd.py  plot_toothpick_details.py  plot_triangle.py
beast/proba/: common.pyx  helpers.py  kernels.py  likelihood.py
beast/run_beast/: create_filenames.py  create_obsmodel.py  create_physicsmodel.py  fitting.py  make_ast_inputs.py  merge_files.py  run_fitting.py
beast/tests/: beast_settings_for_tests.txt  coveragerc  helpers.py  test_regresscheck.py
beast/tools/: __init__.py  append_filter_to_filterLib.py  beast_info.py  beast_settings.py  binningAxis.py  calc_depth_from_completeness.py  calculate_depth.py  compare_spec_type.py  condense_beast_results_spatial.py  contextManagers.py  convert_hdf5_to_fits.py  create_background_density_map.py  create_source_density_map.py  cut_catalogs.py  decorators.py  density_map.py  get_libfiles.py  get_obscat.py  helpers.py  make_libfile.py  merge_beast_stats.py  pbar.py  read_beast_data.py  read_datamodel.py  remove_filters.py  reorder_beast_results_spatial.py  setup_batch_beast_fit.py  setup_batch_beast_trim.py  simulate_obs.py  split_ast_input_file.py  split_asts_by_source_density.py  split_catalog_using_map.py  split_simulated_catalog.py  star_type_probability.py  subdivide_obscat_by_source_density.py  subgridding_tools.py  symlog.py  trim_many_via_obsdata.py  verify_beast_settings.py  verify_params.py  (+1 more)
core/: __init__.py  anased.py  createbiggrid.py  creategrid.py  extinction.py  grid.py  gridbackends.py  gridhelpers.py  hdfstore.py  isochrone.py  observations.py  output.py  pdf1d.py  phot.py  photometry.py  prior_weights.py  priors.py  stellib.py  stellib2.py  trim_grid.py  vega.py
core/ezpadova/: cmd.py
core/future/: tables.py
core/noisemodel/: absflux_covmat.py  helpers.py  noisemodel_trunchen.py  toothpick.py  trunchen.py
docs/: Leo-P_BEAST_Workflow.ipynb  Makefile  analysis_tools.rst  append_filters.rst  beast_development.rst  beast_filters.rst  beast_graphical_model.rst  beast_grid_format.rst  beast_grid_inputs.rst  beast_install.rst  beast_issues.rst  beast_priors.rst  beast_setup.rst  beast_smoke_test.rst  beast_system_requirements.rst  conf.py  datamodel.rst  development_classes.rst  evolutionary_models.rst  example.rst  fitting_api.rst  generating_asts.rst  hello_world.rst  index.rst  install.rst  new_user_interface.rst  observationmodel_api.rst  other_tools.rst  outputs.rst  photometry_files.rst  physicsmodel_api.rst  plotting_api.rst  plotting_tools.rst  publications.rst  requirements.txt  simulations.rst  subgrid_parallelism.rst  tools_api.rst  tutorial.ipynb  workflow.rst  (+1 more)
docs/notebooks/: beast_graph.ipynb
docs/tutorial/: tutorial simple (no subgrids).ipynb  tutorial.ipynb
fitting/: fit.py  models.py
include/: Makefile  __init__.py  interp.pyx  setup.py
io/: simpletable.py
kurucz/: generate.py
libs/: README
license/: LICENSE.rst
licenses/: LICENSE.rst
ngc4214/: ngc4214.py
phat/: phat.py
plotting/: plot_filters.py  plot_indiv_fit.py  plot_stats_check.py
proba/: README.md  __init__.py  common.py  helpers.py  likelihood.py  likelihood.pyx
projects/AST/: calc_cov_ast.py
projects/formatting_tlusty/: tlusty_to_stellib.py
projects/http_toothpick/: check_absflux_covar.py  datamodel_production.py  datamodel_small.py  fit_memory.py  pipeline_production.py  run_production.py  run_small.py  setup_batch_beast_refit.py
projects/mf_dev/: README  beast.xsede.in  beast.xsede.slurm  run_parallel.py
projects/morgan/: README.md  creategrid.py  fake.py  figures.py  fit.py  gridbackend.py  gridbackends.py  hdfstore.py  make_grid.py  mf_phat_b12.py  mf_phat_b12_para.py  models.py  newgrid.py  ngc4214.py  ngc4214_noise.py  phat.py  priors.py  qion.py  (+6 more)
sensitivity_tests/: ezisoch.py  figs.py  main.py  proposal.py
tools/: __init__.py  binningAxis.py  contextManagers.py  decorators.py  ezpipeline.py  figure.py  helpers.py  pbar.py  progressbar.py
units/: __init__.py  astrounits.py
(+289 files in other folders)
