[metadata]
name = beast
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 1.3.2
author = Karl Gordon and BEAST Team
author_email = kgordon@stsci.edu
description = Bayesian Extinction and Stellar Tool
long_description = Fitting for photometric SEDs of dust extinguished stars
license = BSD 3-Clause
url = http://beast.readthedocs.io/
edit_on_github = False
github_project = BEAST-fitting/beast
python_requires = ">=3.5"

[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
# install_requires = astropy; scipy; matplotlib
install_requires = Cython; astropy; scipy; matplotlib; h5py; tables; dust_extinction; tqdm; photutils
zip_safe = False
use_2to3 = False

[options.entry_points]
console_scripts =

    # astropy-package-template-example = packagename.example_mod:main


[options.package_data]
* = *.c
beast = physicsmodel/stars/*/*.json, plotting/tests/baseline/*.png, examples/phat_small*/data/*.hd5
beast.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
ignore = E501, W503

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
ignore = E501, W503
