[metadata]
name = beast
author = Karl Gordon and BEAST Team
author_email = kgordon@stsci.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://beast.readthedocs.io/
description = Bayesian Extinction and Stellar Tool
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = BEAST-fitting/beast

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    Cython
    scipy
    matplotlib
    h5py
    tables
    dust_extinction
    tqdm
    photutils
    shapely

[options.entry_points]
console_scripts =
    beast = beast.main:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
beast = physicsmodel/stars/*/*.json, plotting/tests/baseline/*.png, tools/data/*.txt, tests/*.txt

[tool:pytest]
testpaths = "beast" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
norecursedirs =
    measure_extinction/docs/_build/*
    measure_extinction/docs/api/*

[coverage:run]
omit =
    beast/_astropy_init*
    beast/conftest.py
    beast/*setup_package*
    beast/tests/*
    beast/*/tests/*
    beast/extern/*
    beast/version*
    */beast/_astropy_init*
    */beast/conftest.py
    */beast/*setup_package*
    */beast/tests/*
    */beast/*/tests/*
    */beast/extern/*
    */beast/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
exclude = sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
ignore = E203, E501, W503

[pycodestyle]
exclude = sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
ignore = E203, E501, W503
